--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #2d80d3;
+  --ifm-color-primary-dark: #2873be;
+  --ifm-color-primary-darker: #266db4;
+  --ifm-color-primary-darkest: #1f5a94;
+  --ifm-color-primary-light: #428dd7;
+  --ifm-color-primary-lighter: #4d93da;
+  --ifm-color-primary-lightest: #6ca6e0;
   --ifm-code-font-size: 95%;
 }
 
